--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ public/notebooks
 public/notebooks/*
 public/notebooks_to_ignore
 public/notebooks_to_ignore/*
+DEPLOIEMENT_GITHUB_PAGES.md
+PROJETS_DETAILS.md
